# IOSServer

./: CMakeLists.txt  README.md  dependencies.txt  main.cpp
util/: getMusic.cpp  getMusic.hpp
util/networking/: Listeners.cpp  MusicSend.cpp  MusicSend.hpp  TCP.cpp  TCP.hpp  TCPListener.cpp  networkConfig.hpp
